# Tiktok-Factory

./: .coverage  .gitignore  README.md  handoff_prompt.md  pyproject.toml
configs/: .env.example  accounts.example.yaml  content_policy.example.yaml  factory.example.yaml  gameplay.example.yaml
src/tictoc_factory/: __init__.py  cli.py  config.py  models.py  predictor.py  scoring.py  script_builder.py
src/tictoc_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tictoc_factory/analytics/: store.py
src/tictoc_factory/audio/: __init__.py  providers.py
src/tictoc_factory/discovery/: __init__.py  base.py  fixture.py  reddit.py
src/tictoc_factory/hooks/: __init__.py  generator.py
src/tictoc_factory/llm/: __init__.py  creative.py  openai_client.py
src/tictoc_factory/media/: clip_miner.py  composer.py  gameplay.py  splitter.py
src/tictoc_factory/pipeline/: orchestrator.py
src/tictoc_factory/scheduler/: calendar.py  queue.py
systemd/: tictoc-factory.service  tictoc-factory.timer
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/fixtures/: podcast_segments.json  reddit_posts.json
tests/unit/: test_audio_providers.py  test_cli.py  test_clip_miner.py  test_composer.py  test_config.py  test_gameplay.py  test_hooks.py  test_openai_creative.py  test_pipeline_capacity.py  test_pipeline_creative_package.py  test_pipeline_reddit_duration.py  test_pipeline_regeneration.py  test_scheduler.py  test_scoring.py  test_story_script_builder.py  test_subtitle_layout.py  test_subtitle_preview.py  test_subtitles.py
(+12 files in other folders)
